# first_bot

./: .env  README.md  my_map.yaml
extended_kalman_filter/: CMakeLists.txt  package.xml
extended_kalman_filter/include/extended_kalman_filter/: ekf.hpp  filter_node.hpp
extended_kalman_filter/src/: main.cpp  visualizer.cpp
extended_kalman_filter/test/: CMakeLists.txt  calculate_imu_covariance.cpp  test_eigen_pretty_print.cpp  test_update.cpp
microcontroller_interface/: CMakeLists.txt  package.xml
microcontroller_interface/include/microcontroller_interface/: microcontroller_node.hpp
microcontroller_interface/src/: main.cpp
msg_2d/: CMakeLists.txt  package.xml
msg_2d/msg/: ImuStamped.msg  OdometryStamped.msg
real_launch/: CMakeLists.txt  package.xml
real_launch/config/: imu_covariance.txt  params.yaml  slam.rviz
real_launch/launch/: bringup.launch.py  calculate_imu_covariance.launch.py  localization.launch.py
